# alliance-dashboard

./: INSTRUCTIONS.md  README.md  main.py  pyproject.toml
src/: app.py  config.py  database_operations.py
src/auth/: auth_utils.py
src/db/: database_operations.py  models.py
src/ui/: admin_dashboard.py  data_management.py  guest_dashboard.py  login.py  reports.py
src/utils/: excel_parser.py  logger.py  session.py
