[project]
name = "global-alliances-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openpyxl>=3.1.5",
    "plotly>=6.2.0",
    "streamlit>=1.46.1",
    "streamlit-aggrid>=1.1.6",
    "streamlit-extras>=0.7.5",
    "streamlit-modal>=0.1.2",
    "xlsxwriter>=3.2.5",
]
